# regop

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml  release-please-config.json  rust-toolchain.toml
.github/: renovate.json5
.github/workflows/: ci.yml  conventional-commit.yml  release.yml
src/: diff.rs  lib.rs  main.rs
