[package]
name = "regop"
version = "0.2.3"
edition = "2024"
repository = "https://github.com/gbbirkisson/regop"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
fallible_impl_from = "allow"

[dependencies]
anyhow = "1.0.95"
atty = "0.2.14"
clap = { version = "4.5.28", features = ["derive"] }
regex = "1.11.1"
console = "0.15.10"
similar = { version = "2.7.0", features = ["inline"] }
