[package]
name = "regop"
version = "0.4.2"
edition = "2024"
authors = ["Guðmundur Björn Birkisson"]
description = "Easy file manipulation with regex and operators - find and transform text using powerful regex capture groups and transformation operators"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gbbirkisson/regop"
homepage = "https://github.com/gbbirkisson/regop"
documentation = "https://docs.rs/regop"
readme = "README.md"
keywords = [
  "regex",
  "text-processing",
  "cli",
  "file-manipulation",
  "transformation",
]
categories = ["command-line-utilities", "text-processing", "development-tools"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
fallible_impl_from = "allow"

[[bin]]
name = "regop"
path = "src/main.rs"

[lib]
name = "regop"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
atty = "0.2.14"
clap = { version = "4.5.28", features = ["derive"] }
regex = "1.11.1"
console = "0.15.10"
similar = { version = "2.7.0", features = ["inline"] }
